k8s/java-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: java-api-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: api
    template:
        metadata:
            labels:
                component: api
        spec:
            containers:
                - name: api
                  image: namanv3/connection-api:1.0.1
                  ports:
                      - containerPort: 4567
