k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongodb-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: mongo
    template:
        metadata:
            labels:
                component: mongo
        spec:
            containers:
                - name: mongo
                  image: mongo
                  ports:
                      - containerPort: 27017
