k8s/java-api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: java-api-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: api
    ports:
        - port: 4567
          targetPort: 4567
