k8s/mongodb-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: mongodb-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: mongo
    ports:
        - port: 27017
          targetPort: 27017
