k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    rules:
        - http:
              paths:
                  - path: /users
                    backend:
                        serviceName: java-api-cluster-ip-service
                        servicePort: 4567
